[package]
name = "roam-notion-import"
version = "0.1.0"
authors = ["mdgriffith <mdgriffith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
tree-sitter = "0.16"

[build-dependencies]
cc="*"